tests/compile-fail/integration__integration__type_check__return__none_from_void.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:26:1
   │
26 │ inline void foo() { return; }
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not supported by ANM files


